# vvsu-schedule

./: .dockerignore  .env.example  .env.example.github.actions  .env.example.server  .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.migration.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: vvsu-lite-sync.yml.disabled
alembic/: env.py
alembic/versions/: 637345b9a4a5_init_models.py  6e6a220d42ac_admins_table.py
ansible/: README.md  playbook.yml
ansible/group_vars/: all.yml
ansible/templates/: vvsu-sync.service.j2  vvsu-sync.timer.j2
make/: calendars.mk
src/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
src/frontend/src/: App.tsx  api.ts
src/frontend/src/components/: LogsPanel.tsx  MobileNavbar.tsx  NavTabs.tsx  Navigation.tsx  SchedulerStatusPanel.tsx  StatusTimelinePanel.tsx  TabbedPanel.tsx
src/frontend/src/context/: Auth.tsx
src/frontend/src/pages/: AccountPage.tsx  HomePage.tsx  InitGate.tsx  Login.tsx  Register.tsx  SetupWizard.tsx
src/frontend/src/styles/: auth-form.css  globals.css  home.css  layout.css  logs.css  navbar.css  projects.css  schedulerStatus.css  setup.css  tabs.css  timeline.css
src/schedule_vvsu/: .env.example  api.py  auth.py  config.py  database.py  parser.py  requirements.txt  scheduler.py
src/schedule_vvsu/cli/: main.py
src/schedule_vvsu/db/: models.py
src/schedule_vvsu/dto/: models.py
src/schedule_vvsu/google_calendar/: auth.py  calendar.py  events.py  reconcile.py  sync.py
src/schedule_vvsu/logs/: db_logger.py  logger_setup.py
src/schedule_vvsu/services/: settings_service.py
src/tg_bot/: Dockerfile  pyproject.toml
src/tg_bot/app/: bot.py  client.py  db_listener.py  handlers.py  settings.py  teachers_skill.py
src/vvsu_lite/: add_calendar_to_sa.py  check_calendars.py  dto.py  gcal.py  logging_setup.py  parser.py  sync.py
src/vvsu_lite/google_calendar/: client.py  syncer.py
src/vvsu_lite/tools/: share_calendar.py
