[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = "Admin telegram bot for schedule-vvsu"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
aiogram = "^3.4"
aiohttp = "^3.9"
pydantic = "^2.7"
pydantic-settings = "^2.1"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytz = "^2025.2"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"