[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = "Admin telegram bot for schedule-vvsu"

packages = [
    { include = "tg_bot", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
aiogram = "^3.4"
aiohttp = "^3.9"
pydantic = "^2.7"
pydantic-settings = "^2.1"
asyncpg = "^0.29.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytz = "^2025.2"
thefuzz = "^0.22.1"
python-levenshtein = "^0.27.1"

sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"